rut, navbar y añadir fix

--- a/editarusuarios.html
+++ b/editarusuarios.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand pe-3 ms-4" href="#">
-                <img src="assets/images/logo.png" alt="Bootstrap" width="56">
+                <img src="assets/images/logo.png" alt="Nikedas Logo" width="56">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -25,23 +25,16 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="text-align: right;">
-                    <li class="nav-item">
-                        <a class="nav-link" href="admin.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="totalpedidos.html">Pedidos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="totalusuarios.html">Usuarios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="editar.html">Editar productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Panel de cliente</a>
-                    </li>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="admin.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="totalpedidos.html">Pedidos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="totalusuarios.html">Usuarios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Panel de cliente</a></li>
                 </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
             </div>
         </div>
     </nav>
@@ -54,6 +47,10 @@
                 <!-- Formulario de edición de usuario -->
                 <div class="col-12 col-md-8">
                     <form id="formulario_editar" class="formulario" action="totalusuarios.html" method="POST">
+                        <div class="mb-3">
+                            <label for="rut" class="form-label">RUT</label>
+                            <input type="text" class="form-control" id="rut" value="12.345.678-9" disabled>
+                        </div>
                         <div class="mb-3">
                             <label for="nombre" class="form-label">Nombre</label>
                             <input type="text" class="form-control" id="nombre" value="Juan">
