--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nikedas - Admin</title>
     <link rel="stylesheet" href="assets/bootstrap-5.3.3-dist/css/bootstrap.css">
     <script src="https://kit.fontawesome.com/3e6ff9a951.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/admin.css">
@@ -13,10 +13,9 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
-
         <div class="container-fluid">
             <a class="navbar-brand pe-3 ms-4" href="#">
-                <img src="assets/images/logo.png" alt="Bootstrap" width="56">
+                <img src="assets/images/logo.png" alt="Nikedas Logo" width="56">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -24,161 +23,177 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="text-align: right;">
-                    <li class="nav-item">
-                        <a class="nav-link" href="admin.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="totalpedidos.html">Pedidos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="totalusuarios.html">Usuarios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="editar.html">Editar productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="añadir.html">Añadir Producto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Panel de cliente</a>
-                    </li>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-                        <button class="btn btn-outline-success" type="submit">Buscar</button>
-                    </form>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="admin.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="totalpedidos.html">Pedidos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="totalusuarios.html">Usuarios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">Panel de cliente</a></li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
+                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                </form>
             </div>
-            </ul>
-        </div>
         </div>
     </nav>
-
     <!-- Fin Navbar -->
 
-
+    <!-- Barra de Herramientas -->
+    <div class="container mt-4">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h3 class="mb-0">Productos</h3>
+            <div>
+                <a href="añadir.html" class="btn btn-primary">
+                    <i class="fa-solid fa-plus"></i> Añadir
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- Fin Barra de Herramientas -->
 
     <!-- PRODUCTOS -->
     <section>
         <div class="container">
-            <h3 class="card-carousel-title">Productos</h3>
-            <div class="card-carousel justify-content-center">
-                <div class="card" style="width: 18rem; margin-right: 10px;">
-                    <img src="assets/images/productos/producto1a.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike Air Max Pulse</h5>
-                        <p class="card-text precio">$150.000</p>
-                        <!-- Enlace para redirigir a editar.html -->
-                        <a href="editar.html" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar
-                        </a>
-                        <button type="button" class="btn btn-danger">
-                            <i class="fa-solid fa-trash"></i> Borrar</button>
+            <div class="row" id="product-list">
+                <!-- Tarjetas de productos -->
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="assets/images/productos/producto1a.webp" class="card-img-top"
+                            alt="Nike Air Max Pulse">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Nike Air Max Pulse</h5>
+                            <p class="card-text precio">$150.000</p>
+                            <a href="editar.html" class="btn btn-light me-2">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger" onclick="borrarProducto(this)">
+                                <i class="fa-solid fa-trash"></i> Eliminar
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem; margin-right: 10px;">
-                    <img src="assets/images/productos/producto1a.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike Air Max Pulse</h5>
-                        <p class="card-text precio">$150.000</p>
-                        <!-- Enlace para redirigir a editar.html -->
-                        <a href="editar.html" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar
-                        </a>
-                        <button type="button" class="btn btn-danger">
-                            <i class="fa-solid fa-trash"></i> Borrar</button>
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="assets/images/productos/producto1a.webp" class="card-img-top"
+                            alt="Nike Air Max Pulse">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Nike Air Max Pulse</h5>
+                            <p class="card-text precio">$150.000</p>
+                            <a href="editar.html" class="btn btn-light me-2">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger" onclick="borrarProducto(this)">
+                                <i class="fa-solid fa-trash"></i> Eliminar
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem; margin-right: 10px;">
-                    <img src="assets/images/productos/producto1a.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike Air Max Pulse</h5>
-                        <p class="card-text precio">$150.000</p>
-                        <!-- Enlace para redirigir a editar.html -->
-                        <a href="editar.html" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar
-                        </a>
-                        <button type="button" class="btn btn-danger">
-                            <i class="fa-solid fa-trash"></i> Borrar</button>
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="assets/images/productos/producto1a.webp" class="card-img-top"
+                            alt="Nike Air Max Pulse">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Nike Air Max Pulse</h5>
+                            <p class="card-text precio">$150.000</p>
+                            <a href="editar.html" class="btn btn-light me-2">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger" onclick="borrarProducto(this)">
+                                <i class="fa-solid fa-trash"></i> Eliminar
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem; margin-right: 10px;">
-                    <img src="assets/images/productos/producto1a.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike Air Max Pulse</h5>
-                        <p class="card-text precio">$150.000</p>
-                        <!-- Enlace para redirigir a editar.html -->
-                        <a href="editar.html" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar
-                        </a>
-                        <button type="button" class="btn btn-danger">
-                            <i class="fa-solid fa-trash"></i> Borrar</button>
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="assets/images/productos/producto1a.webp" class="card-img-top"
+                            alt="Nike Air Max Pulse">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Nike Air Max Pulse</h5>
+                            <p class="card-text precio">$150.000</p>
+                            <a href="editar.html" class="btn btn-light me-2">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger" onclick="borrarProducto(this)">
+                                <i class="fa-solid fa-trash"></i> Eliminar
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem; margin-right: 10px;">
-                    <img src="assets/images/productos/producto1a.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike Air Max Pulse</h5>
-                        <p class="card-text precio">$150.000</p>
-                        <!-- Enlace para redirigir a editar.html -->
-                        <a href="editar.html" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar
-                        </a>
-                        <button type="button" class="btn btn-danger">
-                            <i class="fa-solid fa-trash"></i> Borrar</button>
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="assets/images/productos/producto1a.webp" class="card-img-top"
+                            alt="Nike Air Max Pulse">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Nike Air Max Pulse</h5>
+                            <p class="card-text precio">$150.000</p>
+                            <a href="editar.html" class="btn btn-light me-2">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger" onclick="borrarProducto(this)">
+                                <i class="fa-solid fa-trash"></i> Eliminar
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem; margin-right: 10px;">
-                    <img src="assets/images/productos/producto1a.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike Air Max Pulse</h5>
-                        <p class="card-text precio">$150.000</p>
-                        <!-- Enlace para redirigir a editar.html -->
-                        <a href="editar.html" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar
-                        </a>
-                        <button type="button" class="btn btn-danger">
-                            <i class="fa-solid fa-trash"></i> Borrar</button>
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="assets/images/productos/producto1a.webp" class="card-img-top"
+                            alt="Nike Air Max Pulse">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Nike Air Max Pulse</h5>
+                            <p class="card-text precio">$150.000</p>
+                            <a href="editar.html" class="btn btn-light me-2">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger" onclick="borrarProducto(this)">
+                                <i class="fa-solid fa-trash"></i> Eliminar
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem; margin-right: 10px;">
-                    <img src="assets/images/productos/producto1a.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike Air Max Pulse</h5>
-                        <p class="card-text precio">$150.000</p>
-                        <!-- Enlace para redirigir a editar.html -->
-                        <a href="editar.html" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar
-                        </a>
-                        <button type="button" class="btn btn-danger">
-                            <i class="fa-solid fa-trash"></i> Borrar</button>
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="assets/images/productos/producto1a.webp" class="card-img-top"
+                            alt="Nike Air Max Pulse">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Nike Air Max Pulse</h5>
+                            <p class="card-text precio">$150.000</p>
+                            <a href="editar.html" class="btn btn-light me-2">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger" onclick="borrarProducto(this)">
+                                <i class="fa-solid fa-trash"></i> Eliminar
+                            </button>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem; margin-right: 10px;">
-                    <img src="assets/images/productos/producto1a.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Nike Air Max Pulse</h5>
-                        <p class="card-text precio">$150.000</p>
-                        <!-- Enlace para redirigir a editar.html -->
-                        <a href="editar.html" class="btn btn-light">
-                            <i class="fa-solid fa-pen"></i> Editar
-                        </a>
-                        <button type="button" class="btn btn-danger">
-                            <i class="fa-solid fa-trash"></i> Borrar</button>
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img src="assets/images/productos/producto1a.webp" class="card-img-top"
+                            alt="Nike Air Max Pulse">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Nike Air Max Pulse</h5>
+                            <p class="card-text precio">$150.000</p>
+                            <a href="editar.html" class="btn btn-light me-2">
+                                <i class="fa-solid fa-pen"></i> Editar
+                            </a>
+                            <button type="button" class="btn btn-danger" onclick="borrarProducto(this)">
+                                <i class="fa-solid fa-trash"></i> Eliminar
+                            </button>
+                        </div>
                     </div>
                 </div>
+                <!-- Más tarjetas de productos pueden añadirse aquí -->
             </div>
+
         </div>
     </section>
-
-
-
-
-
+    <!-- Fin PRODUCTOS -->
 
     <!-- Footer -->
     <footer>
         <div class="container-fluid bg-body-secondary">
-
             <div class="container footer-container">
                 <div class="footer-logos">
                     <a href="https://www.duoc.cl/" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
@@ -187,12 +202,19 @@
                 </div>
                 <p class="footer-text">© 2024 Nikedas Chile</p>
             </div>
-
         </div>
     </footer>
-
+    <!-- Fin Footer -->
 
     <script src="assets/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
+    <script>
+        function borrarProducto(button) {
+            if (confirm("¿Estás seguro de que deseas eliminar este producto?")) {
+                const card = button.closest('.col-md-3');
+                card.remove();
+            }
+        }
+    </script>
 </body>
 
 </html>
